fixed overflow error on textinput

--- a/front/src/css/text-input.css
+++ b/front/src/css/text-input.css
@@ -9,6 +9,7 @@
     align-items: center;
     align-self: stretch;
     border-radius: 10px;
+    overflow-x: hidden;
 }
 
 .textinput-root-focus {
